.provarCaches/00D5h000009Q6XQEA0/objects/provar__Project__c.object
<CustomObject>
    <fields>
        <fullName>provar__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>provar__External_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>provar__Project_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Lead</label>
        <referenceTo>provar__Person__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Project_URL__c</fullName>
        <label>Project URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>provar__Release_Management_Tool__c</fullName>
        <label>Release Management Tool</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>provar__Release_Management_Tools</valueSetName>
        </valueSet>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>provar__All</fullName>
        <columns>NAME</columns>
        <columns>provar__Project_URL__c</columns>
        <columns>provar__Release_Management_Tool__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>provar__All_Projects_Azure_DevOps</fullName>
        <columns>NAME</columns>
        <columns>provar__Project_URL__c</columns>
        <columns>provar__Project_Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>provar__Release_Management_Tool__c</field>
            <operation>equals</operation>
            <value>Azure DevOps</value>
        </filters>
        <label>All Projects (Azure DevOps)</label>
    </listViews>
    <listViews>
        <fullName>provar__All_Projects_Jira</fullName>
        <columns>NAME</columns>
        <columns>provar__Project_URL__c</columns>
        <columns>provar__Project_Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>provar__Release_Management_Tool__c</field>
            <operation>equals</operation>
            <value>Jira</value>
        </filters>
        <label>All Projects (Jira)</label>
    </listViews>
    <listViews>
        <fullName>provar__All_Projects_Provar</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>provar__Release_Management_Tool__c</field>
            <operation>equals</operation>
            <value>Provar</value>
        </filters>
        <label>All Projects (Provar)</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>